welcome.lessons.welcome.loopdowhile.Poucet1.scala.code


while (sortieTrouvee()==false){
	for (nbrecase<-1 to 5){
    var nbrebiscuit=0
    avance()
  	if (estSurBiscuit()==true){
      nbrebiscuit=nbrebiscuit+1
    }
  }
    
  if (nbrebiscuit>=3){
     gauche()
  }
   
  if (nbrebiscuit<3){
     droite()
  }
  
}
    
      
    
    